fixed footer elements alignment

--- a/assets/css/_styles.scss
+++ b/assets/css/_styles.scss
@@ -228,5 +228,9 @@ header {
     }
     p {
       font-size: 0.7em;
+    }
+
+    i {
+      margin: 7px 7px 7px 0;
     } 
 }
